--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <h2>We Are Specialists At</h2>
 
     <div class="serviceCards">
-      <div class="js-scroll hidden card animate__animated animate__fadeInUp">
+      <div class="js-scroll hidden card animate__animated animate__fadeIn">
         <div class="cardHeader">
           <img src="./Component 1.svg" alt="3d" height="60px" />
           <h3>Machine Control Files</h3>
@@ -58,7 +58,7 @@
         <p> We build 3d surfaces and files for you to use with your smart machines. </p>
       </div>
 
-      <div class="card js-scroll hidden">
+      <div class="card js-scroll hidden animate__animated animate__fadeIn">
         <div class="cardHeader">
           <img src="./Component 2.svg" alt="report" height="60px" />
           <h3>Take Off Report</h3>
@@ -69,7 +69,7 @@
         </p>
       </div>
 
-      <div class="card js-scroll hidden">
+      <div class="card js-scroll hidden animate__animated animate__fadeIn">
         <div class="cardHeader">
           <img src="./satellite 1.svg" alt="gps" height="60px" />
           <h3>Other Services</h3>
