--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </nav>
 
     <div id="particles-js"></div>
-    <div id="header" class="animate__animated animate__fadeIn">
+    <div id="header">
       <h2>Construction is Now Digital</h2>
       <p>We blend technology with construction for foward-thinking companies.</p>
     </div>
@@ -49,7 +49,7 @@
 
     <h2>We Are Specialists At</h2>
 
-    <div class="serviceCards">
+    <div class="js-scroll hidden serviceCards">
       <div class="js-scroll hidden card animate__animated animate__fadeIn">
         <div class="cardHeader">
           <img src="./Component 1.svg" alt="3d" height="60px" />
