text area styles

--- a/index.html
+++ b/index.html
@@ -63,10 +63,7 @@
           <img src="./Component 2.svg" alt="report" height="60px" />
           <h3>Take Off Report</h3>
         </div>
-        <p>
-          Need a hand on take off reports? We offer accurate and detailed reports of materials
-          needed.
-        </p>
+        <p> We offer accurate and detailed reports of for quantities. </p>
       </div>
 
       <div class="card js-scroll hidden animate__animated animate__fadeIn">
