--- a/index.html
+++ b/index.html
@@ -122,6 +122,10 @@
       </div>
     </div>
 
+     <div id="adobe-dc-view" style="width: 800px; box-shadow: 1px 1px 10px 1px #dadada;"></div>
+    <script type="text/javascript" src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
+</body>
+
     <footer>
       <img
         src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1623728756/Gamut/gamut-logo.png"
@@ -238,6 +242,51 @@
       window.addEventListener("scroll", () => {
         handleScrollAnimation();
       });
+    </script>
+
+    <!-- for forms  -->
+    <script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
+    <script type="text/javascript">
+    const viewerConfig = {
+    embedMode: "IN_LINE"
+};
+
+/* Wait for Adobe Document Services PDF Embed API to be ready */
+document.addEventListener("adobe_dc_view_sdk.ready", function () {
+    /* Initialize the AdobeDC View object */
+    var adobeDCView = new AdobeDC.View({
+        /* Pass your registered client id */
+        clientId: "ebabb537d11f4d6794ca508c245c54a1",
+        /* Pass the div id in which PDF should be rendered */
+        divId: "adobe-dc-view",
+    });
+
+    /* Invoke the file preview API on Adobe DC View object */
+    adobeDCView.previewFile({
+        /* Pass information on how to access the file */
+        content: {
+            /* Location of file where it is hosted */
+            location: {
+                url: "https://documentcloud.adobe.com/view-sdk-demo/PDFs/Bodea Brochure.pdf",
+                /*
+                If the file URL requires some additional headers, then it can be passed as follows:-
+                header: [
+                    {
+                        key: "<HEADER_KEY>",
+                        value: "<HEADER_VALUE>",
+                    }
+                ]
+                */
+            },
+        },
+        /* Pass meta data of file */
+        metaData: {
+            /* file name */
+            fileName: "Bodea Brochure.pdf"
+        }
+    }, viewerConfig);
+});
+      
     </script>
   </body>
 </html>
