--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ document.addEventListener("adobe_dc_view_sdk.ready", function () {
         content: {
             /* Location of file where it is hosted */
             location: {
-                url: "https://documentcloud.adobe.com/view-sdk-demo/PDFs/Bodea Brochure.pdf",
+                url: "https://res.cloudinary.com/bfrest/image/upload/v1624932976/Gamut/Gamut_Takeoff_Request_Form_1.pdf",
                 /*
                 If the file URL requires some additional headers, then it can be passed as follows:-
                 header: [
