--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
       </p>
     </div> -->
 
-    <h2>We Are Specialists At</h2>
+    <h2 class="pros">We Are Specialists At</h2>
 
     <div class="serviceCards">
-      <div class="card js-scroll hidden animate__animated animate__fadeIn">
+      <div class="card js-scroll hidden animate__animated animate__fadeIn animate__faster">
         <div class="cardHeader">
           <img src="./Component 1.svg" alt="3d" height="60px" />
           <h3>Machine Control Files</h3>
@@ -58,10 +58,10 @@
         <p> We build 3d surfaces and files for you to use with your smart machines. </p>
       </div>
 
-      <div class="card js-scroll hidden animate__animated animate__fadeIn">
+      <div class="card js-scroll hidden animate__animated animate__fadeIn animate__fast">
         <div class="cardHeader">
           <img src="./Component 2.svg" alt="report" height="60px" />
-          <h3>Take Off Report</h3>
+          <h3>Take Off Reports</h3>
         </div>
         <p> We offer accurate and detailed reports of for quantities. </p>
       </div>
@@ -71,17 +71,18 @@
           <img src="./satellite 1.svg" alt="gps" height="60px" />
           <h3>Other Services</h3>
         </div>
-        <p> We also offer other things..like these options here </p>
+        <p> We also offer other things..like  these options here </p>
+        </div>
       </div>
 
       <div class="steps">
         <p class="howItWorks">Our Process</p>
         <div class="step stepOne">
           <img
-            class="rightPic stepOneImg animate__animated"
+            class="rightPic stepOneImg"
             src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1624212414/Gamut/form-image.png"
           />
-          <div class="stepText stepOneText leftText animate__animated">
+          <div class="stepText stepOneText leftText">
             <p>Fill out our forms so we get all the details right.</p>
             <div class="formBtns">
               <button class="formBtn">3D form</button>
@@ -92,20 +93,20 @@
 
         <div class="step stepTwo">
           <img
-            class="leftPic stepTwoImg animate__animated"
+            class="leftPic stepTwoImg"
             src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1624212414/Gamut/Road-_Back_Rock_Wall_and_Hifiker_SG_1.png"
           />
-          <p class="stepText stepTwoText rightText animate__animated">
+          <p class="stepText stepTwoText rightText">
             We create 3D models, polyines and points that are ready for machine control.
           </p>
         </div>
 
         <div class="step stepThree">
           <img
-            class="rightPic stepThreeImg animate__animated"
+            class="rightPic stepThreeImg"
             src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1624212414/Gamut/Finished_Roadway_1.png"
           />
-          <p class="stepText stepThreeText leftText animate__animated"
+          <p class="stepText stepThreeText leftText"
             >Let your work speak for itself</p
           >
         </div>
@@ -120,7 +121,7 @@
           <button>Send Message</button>
         </form>
       </div>
-    </div>
+    
 
     <img src="https://res.cloudinary.com/bfrest/image/upload/f_auto/v1624932976/Gamut/Gamut_Takeoff_Request_Form_1.pdf"  height="300px"/>
 </body>
