--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li>
           <a href="#header">
             <img
-              src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1623728756/Gamut/gamut-logo.png"
+              src="https://res.cloudinary.com/bfrest/image/upload/v1623728756/Gamut/gamut-logo.png"
               alt="logo"
             />
           </a>
@@ -53,9 +53,9 @@
       <div class="card js-scroll hidden animate__animated animate__fadeIn animate__faster">
         <div class="cardHeader">
           <img src="./Component 1.svg" alt="3d" height="60px" />
-          <h3>Machine Control Files</h3>
+          <h3>Machine Control</h3>
         </div>
-        <p> We build 3d surfaces and files for you to use with your smart machines. </p>
+        <p> We build 3d surfaces and files for you to use with your smart machines.</p>
       </div>
 
       <div class="card js-scroll hidden animate__animated animate__fadeIn animate__fast">
@@ -71,7 +71,7 @@
           <img src="./satellite 1.svg" alt="gps" height="60px" />
           <h3>Other Services</h3>
         </div>
-        <p> We also offer other things..like  these options here </p>
+        <p> We also offer other things like ... </p>
         </div>
       </div>
 
@@ -80,7 +80,7 @@
         <div class="step stepOne">
           <img
             class="rightPic stepOneImg"
-            src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1624212414/Gamut/form-image.png"
+            src="https://res.cloudinary.com/bfrest/image/upload/v1624212414/Gamut/form-image.png"
           />
           <div class="stepText stepOneText leftText">
             <p>Fill out our forms so we get all the details right.</p>
@@ -94,7 +94,7 @@
         <div class="step stepTwo">
           <img
             class="leftPic stepTwoImg"
-            src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1624212414/Gamut/Road-_Back_Rock_Wall_and_Hifiker_SG_1.png"
+            src="https://res.cloudinary.com/bfrest/image/upload/v1624212414/Gamut/Road-_Back_Rock_Wall_and_Hifiker_SG_1.png"
           />
           <p class="stepText stepTwoText rightText">
             We create 3D models, polyines and points that are ready for machine control.
@@ -104,21 +104,21 @@
         <div class="step stepThree">
           <img
             class="rightPic stepThreeImg"
-            src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1624212414/Gamut/Finished_Roadway_1.png"
+            src="https://res.cloudinary.com/bfrest/image/upload/v1624212414/Gamut/Finished_Roadway_1.png"
           />
           <p class="stepText stepThreeText leftText"
-            >Let your work speak for itself</p
+            >Load the file on your machine and let your work speak for itself</p
           >
         </div>
       </div>
 
       <div id="contact">
-        <form>
+        <form action="https://formsubmit.co/freston75@gmail.com" method="POST">
           <h2>Questions?</h2>
-            <input type="text" placeholder="Your Name" />
-            <input type="email" placeholder="Your Email" />
-          <textarea placeholder="Your Message" style="height: 300px"></textarea>
-          <button>Send Message</button>
+            <input type="text" name='name' placeholder="Name" />
+            <input type="email" name='email' placeholder="Email" />
+          <textarea placeholder="Message" name='message' style="height: 300px"></textarea>
+          <button type="submit">Send Message </button>
         </form>
       </div>
     
@@ -127,7 +127,7 @@
 
     <footer>
       <img
-        src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1623728756/Gamut/gamut-logo.png"
+        src="https://res.cloudinary.com/bfrest/image/upload/v1623728756/Gamut/gamut-logo.png"
         alt="logo"
         height="100px"
       />
