--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="step stepOne">
           <img
             class="rightPic stepOneImg"
-            src="https://res.cloudinary.com/bfrest/image/upload/v1624212414/Gamut/form-image.png"
+            src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1626008976/ipad-form.png"
           />
           <div class="stepText stepOneText leftText">
             <p>Fill out our forms so we get all the details right.</p>
@@ -94,7 +94,7 @@
         <div class="step stepTwo">
           <img
             class="leftPic stepTwoImg"
-            src="https://res.cloudinary.com/bfrest/image/upload/v1624212414/Gamut/Road-_Back_Rock_Wall_and_Hifiker_SG_1.png"
+            src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1626008982/ipad-3d-model.png"
           />
           <p class="stepText stepTwoText rightText">
             We create 3D models, polyines and points that are ready for machine control.
@@ -104,7 +104,7 @@
         <div class="step stepThree">
           <img
             class="rightPic stepThreeImg"
-            src="https://res.cloudinary.com/bfrest/image/upload/v1624212414/Gamut/Finished_Roadway_1.png"
+            src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1626008980/ipad-finished-road.png"
           />
           <p class="stepText stepThreeText leftText"
             >Load the file on your machine and let your work speak for itself</p
