--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
         src="https://res.cloudinary.com/bfrest/image/upload/v1623728756/Gamut/gamut-logo.png"
         alt="logo"
         height="100px"
+        class="footerLogo"
       />
       <p>323-994-0093</p>
       <p>justinf@gamutps.com</p>
