--- a/index.html
+++ b/index.html
@@ -78,10 +78,13 @@
           <div class="stepText rightText">
             <p>Fill out our forms so we get all the details right.</p>
             <div class="formBtns">
+              <button class="formBtn">
+                <a href="./3D_model_form.pdf" download="Takeoff Form">3D Model form</a>
+              </button>
               
-                <button class="formBtn"><a href="./3D_model_form.pdf" download="Takeoff Form">3D Model form</a></button>
-              </a>
-              <button class="formBtn"><a href="./takeoff_form.pdf" download="Takeoff Form"></a>Takeoff form</a></button>
+              <button class="formBtn">
+                <a href="./takeoff_form.pdf" download="Takeoff Form">Takeoff form</a>
+              </button>
             </div>
           </div>
         
@@ -105,7 +108,7 @@
 
       <div id="contact">
         <form action="https://formsubmit.co/freston75@gmail.com" method="POST">
-          <h2>Questions?</h2>
+          <p>Get In Touch</p>
             <input type="text" name='name' placeholder="Name" />
             <input type="email" name='email' placeholder="Email" />
           <textarea placeholder="Message" name='message' style="height: 300px"></textarea>
