need a footer git push

--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
       <div class="card js-scroll hidden animate__animated animate__fadeIn">
         <div class="cardHeader">
           <img src="./satellite 1.svg" alt="gps" height="60px" />
-          <h3>Other Services</h3>
+          <h3>Cut/Fill Reports</h3>
         </div>
-        <p> We also offer other things like ... </p>
+        <p>Tired of guessing how much material will need to be moved?</p>
         </div>
       </div>
 
-      <p class="howItWorks">Our Process</p>
+      <p id='services'  class="howItWorks">Our Process</p>
       <div class="steps">
         
           <img
