--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <img src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1626633630/Gamut/Component_11.png" alt="report" height="60px" />
           <h3>Take Off Reports</h3>
         </div>
-        <p>We offer accurate and detailed reports of for quantities. </p>
+        <p>Accurate and detailed reports of for quantities. </p>
       </div>
 
       <div class="card js-scroll hidden animate__animated animate__fadeIn animate__faster">
@@ -63,7 +63,7 @@
           <img src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1626633630/Gamut/pie-chart_1.png" alt="gps" height="60px" />
           <h3>Cut/Fill Quantities</h3>
         </div>
-        <p>Tired of guessing how much material will need to be moved?</p>
+        <p>Get precise data on how much material will need to be moved.</p>
         </div>
       </div>
 
