--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1626008976/ipad-form.png"
           />
           
-          <div class="stepText rightText">
+          <div class="stepText rightText hasBtns">
             <p>Fill out our forms so we get all the details right.</p>
             <div class="formBtns">
               <button class="formBtn">
