--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <img src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1626633630/Gamut/Component_11.png" alt="report" height="60px" />
           <h3>Take Off Reports</h3>
         </div>
-        <p>Accurate and detailed reports of for quantities. </p>
+        <p>Accurate and detailed, area, cut & fill/import-export with materials quantities.</p>
       </div>
 
       <div class="card js-scroll hidden animate__animated animate__fadeIn animate__faster">
@@ -55,7 +55,7 @@
           <img src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1626633630/Gamut/Union.png" alt="3d" height="60px" />
           <h3>3D Machine Control</h3>
         </div>
-        <p>We build 3d surfaces and files for you to use with your smart machines.</p>
+        <p>We build 3d surfaces, polylines and points for you to use with any smart machine.</p>
       </div>
 
       <div class="card js-scroll hidden animate__animated animate__fadeIn">
@@ -65,11 +65,34 @@
         </div>
         <p>Get precise data on how much material will need to be moved.</p>
         </div>
+
+        <!-- <div class="card js-scroll hidden animate__animated animate__fadeIn">
+        <div class="cardHeader">
+          <img src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1626750609/Gamut/drone_1.png" alt="gps" height="60px" />
+          <h3>Drone Surveying</h3>
+        </div>
+        <p>Dronage</p>
+        </div>
+
+        <div class="card js-scroll hidden animate__animated animate__fadeIn">
+        <div class="cardHeader">
+          <img src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1626751216/Gamut/truck.png" alt="gps" height="60px" />
+          <h3>Mass Haul</h3>
+        </div>
+        <p>Understand the project better and increase profit margins with a </p>
+        </div>
+
+        <div class="card js-scroll hidden animate__animated animate__fadeIn">
+        <div class="cardHeader">
+          <img src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1626751216/Gamut/truck.png" alt="gps" height="60px" />
+          <h3>Software Training & Consulting</h3>
+        </div>
+        <p>We offer 1 on 1 training in all areas above.</p>
+        </div> -->
       </div>
 
       <p id='services'  class="howItWorks">Our Process</p>
       <div class="steps">
-        
           <img
             class="stepImg leftImg"
             src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1626008976/ipad-form.png"
@@ -88,8 +111,8 @@
             </div>
           </div>
         
-          <p class="stepText  leftText">
-            We create 3D models, polyines and points that are ready for machine control.
+          <p class="stepText modelInfo leftText">
+           We create and model 3D digital data for all positioning and machine control manufacturers. Topcon, Trimble , Leica for Roadways, Sitework, Structural Foundations, Utilities, Curbs
           </p>
 
           <img
@@ -112,7 +135,7 @@
 
     <footer>
       <div id="contact">
-        <form action="https://formsubmit.co/freston75@gmail.com" method="POST">
+        <form action="https://formsubmit.co/justinf@gamutps.com" method="POST">
           <p>Get In Touch</p>
             <input type="text" name='name' placeholder="Name" />
             <input type="email" name='email' placeholder="Email" />
