--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           </div>
         
           <p class="stepText modelInfo leftText">
-           We model 3D digital data for all positioning and machine control manufacturers including Topcon, Trimble, and Leica for all Roadways, Sitework, Structural Foundations, Utilities, and Curbs.
+           We model 3D digital data for all positioning and machine control manufacturers including Topcon, Trimble, and Leica for all roadways, sitework, structural foundations, utilities, and curbs.
           </p>
 
           <img
