update phone and email

--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
       </div>
       
       <div class='footerInfo'>
-        <p>323-994-0093</p>
-        <p>justinf@gamutps.com</p>
+        <p>832-943-0073</p>
+        <p>jfarthing@gamutps.com</p>
         <p>GamutPS 2021©</p>
         <!-- <p>Designed & Developed by Brendon Freston</p> -->
       </div>
