--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       <div class='footerInfo'>
         <p>832-943-0073</p>
         <p>jfarthing@gamutps.com</p>
-        <p>GamutPS 2022©</p>
+        <p>GamutPS 2023</p>
         <!-- <p>Designed & Developed by Brendon Freston</p> -->
       </div>
     </footer>
